# install-rate

./: Dockerfile  docker-compose.yml  pyproject.toml  readme.md
notebooks/: exploration.ipynb
src/job/: main.py  training_features.yaml
src/job/helpers/: __init__.py  download.py  evaluate.py  feature_eng.py  prepare.py  save.py
src/job/models/: __init__.py  logistic_regression.py  model.py
